kubernetes/gcp-api-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: gcp-api-pod
  namespace: gcp-deployment
  labels:
    app: gcp
spec:
#  volumes:
#  - name: cert-storage
#    persistentVolumeClaim:
#      claimName: certs-pvc
  containers:
# STUB
  - name: gcp-stub-microservice
    image: gcr.io/winged-carrier-299322/gcp-stub:2.0
    ports:
    - containerPort: 5001
    - containerPort: 5000
 #   volumeMounts:
 #   - name: cert-storage
 #     mountPath: "/https/"
  - name: gcp-api-microservice
    image: gcr.io/winged-carrier-299322/gcp-api:2.0
    ports:
    - containerPort: 7001
    - containerPort: 7000
#    volumeMounts:
#    - name: cert-storage
#      mountPath: "/https/"
  - name: gcp-ui-microservice
    image: gcr.io/winged-carrier-299322/gcp-ui:2.0
    ports:
    - containerPort: 80
