kubernetes/gcp-api-services.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: gcp
  name: gcp-api
  namespace: gcp-deployment
  annotations:
    konghq.com/protocol: https
spec:
  ports:
  - port: 443
    name: high
    protocol: TCP
    targetPort: 7001
  - port: 80
    name: low
    protocol: TCP
    targetPort: 7000
  selector:
    app: gcp
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: gcp
  name: gcp-ui
  namespace: gcp-deployment
  annotations:
    konghq.com/protocol: http
spec:
  ports:
  - port: 80
    name: low
    protocol: TCP
    targetPort: 80
  - port: 443
    name: high
    protocol: TCP
    targetPort: 443
  selector:
    app: gcp
