kubernetes/gcp-api-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: api-ingress
  namespace: gcp-deployment
  annotations:
    konghq.com/strip-path: "true"
    konghq.com/https-redirect-status-code: "301"
    kubernetes.io/ingress.class: kong
spec:
  tls:
  - hosts:
      - k8s.eccordion.com
    secretName: api-tls
  rules:
  - http:
      paths:
      - path: /services/api
        pathType: Prefix
        backend:
          serviceName: gcp-api
          servicePort: 443        
      - path: /
        pathType: Prefix
        backend:
          serviceName: gcp-ui
          servicePort: 443
